UV Editor - View Tab > Overlay > Display as Outline : not work on macOS #76806

Closed
opened 2020-05-16 16:39:58 +02:00 by Pinzer · 16 comments

System Information
Operating system: Darwin-18.7.0-x86_64-i386-64bit 64 Bits
Graphics card: AMD Radeon R9 M370X OpenGL Engine ATI Technologies Inc. 4.1 ATI-2.11.21

Blender Version
Broken: version: 2.82 (sub 7), branch: master, commit date: 2020-03-12 05:06, hash: 375c7dc4ca
Worked: (optional)

Short description of error
Sorry for my bad English,

  • in Uv Editor, the Overlay display as Outline not work and it is really difficult to see the uv islands.
    Maybe it depends on macOS Mojave,but in Blender 2.79 is working fine...
  • Also, the "Outline Width" in Preference > Theme > 3D View does nothing.

Thanks,
Pinzer

Exact steps for others to reproduce the error
Enter in Uv Editor and watch the Uv map
Schermata 2020-05-16 alle 16.35.44.png

**System Information** Operating system: Darwin-18.7.0-x86_64-i386-64bit 64 Bits Graphics card: AMD Radeon R9 M370X OpenGL Engine ATI Technologies Inc. 4.1 ATI-2.11.21 **Blender Version** Broken: version: 2.82 (sub 7), branch: master, commit date: 2020-03-12 05:06, hash: `375c7dc4ca` Worked: (optional) **Short description of error** Sorry for my bad English, - in Uv Editor, the Overlay display as Outline not work and it is really difficult to see the uv islands. Maybe it depends on macOS Mojave,**but in Blender 2.79 is working fine...** - Also, the "Outline Width" in Preference > Theme > 3D View does nothing. Thanks, Pinzer **Exact steps for others to reproduce the error** Enter in Uv Editor and watch the Uv map ![Schermata 2020-05-16 alle 16.35.44.png](https://archive.blender.org/developer/F8538709/Schermata_2020-05-16_alle_16.35.44.png)
Author

Added subscriber: @pinzerlakkere

Added subscriber: @pinzerlakkere
Member

Added subscriber: @ankitm

Added subscriber: @ankitm
Member

Could you check on an experimental build ? https://builder.blender.org
It added an option of UV opacity too.
Also upload a simple blend file like that screenshot. On default scene, visibility isn't an issue.

Could you check on an experimental build ? https://builder.blender.org It added an option of UV opacity too. Also upload a simple blend file like that screenshot. On default scene, visibility isn't an issue.
Member

Changed status from 'Needs Triage' to: 'Needs User Info'

Changed status from 'Needs Triage' to: 'Needs User Info'
Author

Hi,
I try 2.83 and 2.90, both with default setting.

The "Overlay Opacity" is active (1), but the black outline on UV edge not display

Maybe is a issue relative to my machine?
The "Outline Width" in "Preference > Theme > 3D View" only works if I open blender at low resolution.
Thanks,
Pinzer

untitled.blend

Hi, I try 2.83 and 2.90, both with default setting. The "Overlay Opacity" is active (1), but the black outline on UV edge not display Maybe is a issue relative to my machine? The "Outline Width" in "Preference > Theme > 3D View" only works if I open blender at low resolution. Thanks, Pinzer [untitled.blend](https://archive.blender.org/developer/F8539966/untitled.blend)
Member

Changed status from 'Needs User Info' to: 'Needs Triage'

Changed status from 'Needs User Info' to: 'Needs Triage'
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Both working fine here

System Information
Operating system: Linux-5.5.13-200.fc31.x86_64-x86_64-with-fedora-31-Thirty_One 64 Bits
Graphics card: GeForce GTX 970M/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 440.64
version: 2.90 (sub 2), branch: master, commit date: 2020-05-17 18:22, hash: 5c5a638b57

Both working fine here **System Information** Operating system: Linux-5.5.13-200.fc31.x86_64-x86_64-with-fedora-31-Thirty_One 64 Bits Graphics card: GeForce GTX 970M/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 440.64 version: 2.90 (sub 2), branch: master, commit date: 2020-05-17 18:22, hash: `5c5a638b57`
Author

Yes,...I imagined it
macOS is not the best friend for Blender!
What a pity ...maybe I should switch to Linux
...or go back to 2.79, where the "overlay" in UV editor seems to work well.

  • Pinzer
Yes,...I imagined it macOS is not the best friend for Blender! What a pity ...maybe I should switch to Linux ...or go back to 2.79, where the "overlay" in UV editor seems to work well. - Pinzer
Member

@lichtwerk could you add a photo? I'm unsure about what to compare it with.

@lichtwerk could you add a photo? I'm unsure about what to compare it with.
Author

Yep, of course!

2.79.png

2.90.png

and system info, if needed

system-info.txt

  • Pinzer
Yep, of course! ![2.79.png](https://archive.blender.org/developer/F8541103/2.79.png) ![2.90.png](https://archive.blender.org/developer/F8541104/2.90.png) and system info, if needed [system-info.txt](https://archive.blender.org/developer/F8541107/system-info.txt) - Pinzer
Campbell Barton changed title from UV Editor - View Tab > Overlay > Display as Outline : not work to UV Editor - View Tab > Overlay > Display as Outline : not work on macOS 2020-05-18 12:55:35 +02:00
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Added subscriber: @Jeroen-Bakker

Added subscriber: @Jeroen-Bakker
Member

This is a known issue. The outlines use glLineWidth width what isn't supported by Mac. A short term solution would be to re-implement the UV line drawing to use faces. A longer term solution is the migration of the UV Image editor to the draw manager where we can use the overlay engine to render lines. Due to the Faster Animation Playback this project slips D6093: [WIP] DrawManager: Image/UV editor Drawing.

This is a known issue. The outlines use glLineWidth width what isn't supported by Mac. A short term solution would be to re-implement the UV line drawing to use faces. A longer term solution is the migration of the UV Image editor to the draw manager where we can use the overlay engine to render lines. Due to the Faster Animation Playback this project slips [D6093: [WIP] DrawManager: Image/UV editor Drawing](https://archive.blender.org/developer/D6093).

This issue was referenced by afd976a3b4

This issue was referenced by afd976a3b483ae0e0bc9547825ff587e5297a23c

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Clément Foucault self-assigned this 2020-07-02 02:32:28 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#76806
No description provided.