Fix T76806 UV Editor: Display as Outline do not work on macOS

This is a simple workaround using polyline shader. This is temporary and
a better solution should be found when we refactor the 2D view using DRW.